javaDSL/src/test/resources/typeSystemTestModels/invalid/fieldsAndLocalVars/Second.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.invalid.fieldsAndLocalVars;

import java.lang.Integer;

public class Second<T> extends First<Integer> {

}
